# planning-lama

./: .gitignore  CMakeLists.txt  README.md  bootstrap.sh  install.sh  manifest.xml  plan.in
lama/preprocess/: preprocess
lama/search/: release-search
lama/translate/: additive-hmax.py  axiom_rules.py  build_model.py  fact_groups.py  graph.py  instantiate.py  invariant_finder.py  pddl_to_prolog.py  relaxed_task.py  relaxed_tasks.py  sas_tasks.py  simplify.py  translate-relaxed.py  translate.py
lama/translate/pddl/: actions.py  axioms.py  conditions.py  f_expression.py  functions.py  pddl_file.py  pddl_types.py  tasks.py
